bpo-30167: Remove __cached__ when removing __file__